--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-POSTGRES_URI=postgres://postgres.luhxzvhgazjbkmpaufnc:JUYGVMX1MQ7SYuHl@aws-0-us-west-1.pooler.supabase.com:5432/postgres
+POSTGRES_URI=postgresql://postgres.luhxzvhgazjbkmpaufnc:lucaspierce$13%G@aws-0-us-west-1.pooler.supabase.com:5432/postgres
