--- a/web/package.json
+++ b/web/package.json
@@ -64,6 +64,7 @@
     "eslint-config-next": "^13.0.1",
     "postcss": "^8.4.16",
     "prisma": "^4.3.1",
+    "supabase": "^1.151.1",
     "tailwindcss": "^3.1.8",
     "tailwindcss-bg-patterns": "^0.2.0",
     "typescript": "4.7.4"
