--- a/chrome_extension/package.json
+++ b/chrome_extension/package.json
@@ -3,7 +3,8 @@
   "module": "bundler.ts",
   "version": "0.0.1",
   "dependencies": {
-    "astro": "^3.2.1"
+    "astro": "^3.2.1",
+    "glob": "^10.3.12"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.246",
