--- a/web/app/package.json
+++ b/web/app/package.json
@@ -4,9 +4,9 @@
   "description": "TOS Buddy is a chrome extension that helps users understand and control their privacy on the internet. It tells users if a website's terms of service are good or bad and warns them about privacy risks. The extension also keeps track of what personal information users share with websites.",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "bun next dev",
+    "build": "bun next build",
+    "start": "bun next start"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
     "crawlee": "^3.8.2",
     "marked": "^4.0.12",
     "next": "^12.3.0",
+    "punycode": "^2.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "swiper": "^8.0.7",
