updating packages for build + new UI components

--- a/web/app/tsconfig.json
+++ b/web/app/tsconfig.json
@@ -16,9 +16,9 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./*"]
+      "~/*": ["./*"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "lib/utils/cn.ts"],
   "exclude": ["node_modules"]
 }
