--- a/web/app/package.json
+++ b/web/app/package.json
@@ -16,16 +16,21 @@
     "@anthropic-ai/sdk": "^0.20.2",
     "@supabase/supabase-js": "^1.33.3",
     "@supabase/ui": "^0.37.0-alpha.50",
+    "@tabler/icons-react": "^3.2.0",
     "anthropic": "^0.0.0",
     "classnames": "^2.3.1",
-    "crawlee": "^3.9.1",
+    "clsx": "^2.1.0",
+    "crawlee": "next",
+    "framer-motion": "^11.1.5",
     "marked": "^4.0.12",
     "next": "^12.3.0",
+    "next-themes": "^0.3.0",
     "playwright": "^1.43.1",
     "punycode": "^2.3.1",
-    "react": "^17.0.2",
+    "react": "latest",
     "react-dom": "^17.0.2",
     "swiper": "^8.0.7",
+    "tailwind-merge": "^2.2.2",
     "use-debounce": "^7.0.1"
   },
   "devDependencies": {
@@ -35,7 +40,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "@types/marked": "^4.0.3",
     "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
+    "@types/react": "latest",
     "autoprefixer": "^10.4.4",
     "deepmerge": "^4.2.2",
     "mini-svg-data-uri": "^1.4.4",
@@ -43,7 +48,6 @@
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.1.8",
     "tailwindcss": "^3.0.23",
-    "tailwindcss-radix": "^1.6.0",
-    "typescript": "^4.6.3"
+    "tailwindcss-radix": "^1.6.0"
   }
 }
