--- a/web/app/package.json
+++ b/web/app/package.json
@@ -14,40 +14,41 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.20.2",
-    "@supabase/supabase-js": "^1.33.3",
+    "@supabase/supabase-js": "^2.42.5",
     "@supabase/ui": "^0.37.0-alpha.50",
     "@tabler/icons-react": "^3.2.0",
     "anthropic": "^0.0.0",
     "classnames": "^2.3.1",
     "clsx": "^2.1.0",
     "crawlee": "next",
+    "eslint-config-next": "latest",
     "framer-motion": "^11.1.5",
     "marked": "^4.0.12",
-    "next": "^12.3.0",
+    "next": "latest",
     "next-themes": "^0.3.0",
     "playwright": "^1.43.1",
     "punycode": "^2.3.1",
     "react": "latest",
-    "react-dom": "^17.0.2",
+    "react-dom": "latest",
     "swiper": "^8.0.7",
     "tailwind-merge": "^2.2.2",
     "use-debounce": "^7.0.1"
   },
   "devDependencies": {
     "@mertasan/tailwindcss-variables": "^2.2.2",
-    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/colors": "^3.0.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
-    "@types/marked": "^4.0.3",
-    "@types/node": "^17.0.23",
+    "@types/marked": "^6.0.0",
+    "@types/node": "^20.12.7",
     "@types/react": "latest",
-    "autoprefixer": "^10.4.4",
+    "autoprefixer": "^10.4.19",
     "deepmerge": "^4.2.2",
     "mini-svg-data-uri": "^1.4.4",
-    "postcss": "^8.4.12",
-    "prettier": "^2.6.2",
-    "prettier-plugin-tailwindcss": "^0.1.8",
-    "tailwindcss": "^3.0.23",
+    "postcss": "^8.4.38",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "tailwindcss": "^3.4.3",
     "tailwindcss-radix": "^1.6.0"
   }
 }
