--- a/web/app/.env.local.example
+++ b/web/app/.env.local.example
@@ -1,4 +1,4 @@
 SUPABASE_HOSTNAME="xxxx.supabase.co"
-SUPABASE_URL=""
-SUPABASE_ANON_KEY=""
+NEXT_PUBLIC_SUPABASE_URL=""
+NEXT_PUBLIC_SUPABASE_ANON_KEY=""
 ANTHROPIC_API_KEY=""
