--- a/web/app/package.json
+++ b/web/app/package.json
@@ -30,6 +30,7 @@
     "punycode": "^2.3.1",
     "react": "latest",
     "react-dom": "latest",
+    "sass": "^1.75.0",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.2",
     "use-debounce": "^10.0.0"
