--- a/web/app/package.json
+++ b/web/app/package.json
@@ -43,7 +43,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "@types/marked": "^6.0.0",
     "@types/node": "^20.12.7",
-    "@types/react": "latest",
+    "@types/react": "^18.2.79",
     "autoprefixer": "^10.4.19",
     "deepmerge": "^4.3.1",
     "mini-svg-data-uri": "^1.4.4",
@@ -51,6 +51,7 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
-    "tailwindcss-radix": "^3.0.3"
+    "tailwindcss-radix": "^3.0.3",
+    "typescript": "^5.4.5"
   }
 }
