--- a/web/app/package.json
+++ b/web/app/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.3.1",
     "clsx": "^2.1.0",
     "crawlee": "next",
+    "dotenv": "^16.4.5",
     "eslint-config-next": "latest",
     "framer-motion": "^11.1.5",
     "marked": "^12.0.1",
@@ -41,6 +42,7 @@
     "@radix-ui/colors": "^3.0.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
+    "@types/dotenv": "^8.2.0",
     "@types/marked": "^6.0.0",
     "@types/node": "^20.12.7",
     "@types/react": "^18.2.79",
