--- a/web/app/.env.local.example
+++ b/web/app/.env.local.example
@@ -1,4 +1,9 @@
+# Postgres hosting is on Supabase:
+# learn more: https://supabase.com/docs/guides/api/api-keys
 SUPABASE_HOSTNAME="xxxx.supabase.co"
 NEXT_PUBLIC_SUPABASE_URL=""
 NEXT_PUBLIC_SUPABASE_ANON_KEY=""
+
+# API key for Claude Haiku
+# learn more: https://docs.anthropic.com/claude/reference/getting-started-with-the-api
 ANTHROPIC_API_KEY=""
