--- a/web/app/package.json
+++ b/web/app/package.json
@@ -33,6 +33,7 @@
     "react": "latest",
     "react-dom": "latest",
     "sass": "^1.75.0",
+    "sharp": "^0.33.3",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.2",
     "use-debounce": "^10.0.0"
