preparing crawl.ts for google search

--- a/web/app/.env.local.example
+++ b/web/app/.env.local.example
@@ -7,3 +7,6 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=""
 # API key for Claude Haiku
 # learn more: https://docs.anthropic.com/claude/reference/getting-started-with-the-api
 ANTHROPIC_API_KEY=""
+
+# If playwright scraping doesnt find the TOS we use google search as the backup:
+GOOGLE_SEARCH_API_KEY=""
