--- a/web/app/package.json
+++ b/web/app/package.json
@@ -28,6 +28,7 @@
     "imagemagick": "^0.1.3",
     "marked": "^12.0.1",
     "next": "latest",
+    "next-plausible": "^3.12.0",
     "next-themes": "^0.3.0",
     "playwright": "^1.43.1",
     "punycode": "^2.3.1",
