--- a/chrome_extension/public/manifest.json
+++ b/chrome_extension/public/manifest.json
@@ -4,9 +4,12 @@
   "version": "0.1.0",
   "description": "TOS Buddy is a chrome extension that helps users understand and control their privacy on the internet. It tells users if a website's terms of service are good or bad and warns them about privacy risks. The extension also keeps track of what personal information users share with websites.",
   "author": "Arne Noori & Connor O'Brien",
+  "permissions": [
+    "activeTab"
+  ],
   "content_scripts": [
     {
-      "matches": ["http://*/*"],
+      "matches": ["<all_urls>"],
       "js": ["content.js"],
       "css": ["content.css"]
     }
@@ -23,12 +26,6 @@
     },
     "default_popup": "index.html",
     "default_title": "TOS Buddy"
-  },
-  "browser_specific_settings": {
-    "gecko": {
-      "id": "yourcustom@token.io",
-      "strict_min_version": "42.0"
-    }
   },
   "icons": {
     "16": "assets/images/icon16.png",
