--- a/chrome_exten/manifest.json
+++ b/chrome_exten/manifest.json
@@ -21,12 +21,12 @@
   },
   "action": {
     "default_icon": {
-      "16": "assets/images/icon16.png",
-      "32": "assets/images/icon32.png",
-      "48": "assets/images/icon48.png",
-      "128": "assets/images/icon128.png"
+      "16": "public/assets/images/icon16.png",
+      "32": "public/assets/images/icon32.png",
+      "48": "public/assets/images/icon48.png",
+      "128": "public/assets/images/icon128.png"
     },
-    "default_popup": "index.html",
+    "default_popup": "public/pupup.html",
     "default_title": "TOS Buddy"
   },
   "browser_specific_settings": {
@@ -36,9 +36,9 @@
     }
   },
   "icons": {
-    "16": "assets/images/icon16.png",
-    "32": "assets/images/icon32.png",
-    "48": "assets/images/icon48.png",
-    "128": "assets/images/icon128.png"
+    "16": "public/assets/images/icon16.png",
+    "32": "public/assets/images/icon32.png",
+    "48": "public/assets/images/icon48.png",
+    "128": "public/assets/images/icon128.png"
   }
 }
