--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -8,6 +8,9 @@
     "activeTab",
     "tabs"
   ],
+  "host_permissions": [
+    "*://tosbuddy.com/*"
+  ],
   "content_scripts": [
     {
       "matches": ["http://*/*"],
