--- a/web/app/.env.local.example
+++ b/web/app/.env.local.example
@@ -10,3 +10,6 @@ ANTHROPIC_API_KEY=""
 
 # If playwright scraping doesnt find the TOS we use google search as the backup:
 GOOGLE_SEARCH_API_KEY=""
+
+# For analytics:
+PLAUSIBLE_DOMAIN="tosbuddy.com"
