--- a/web/app/package.json
+++ b/web/app/package.json
@@ -15,13 +15,15 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.20.2",
+    "@phosphor-icons/react": "^2.1.5",
     "@supabase/supabase-js": "^2.42.5",
     "@supabase/ui": "^0.37.0-alpha.50",
     "@tabler/icons-react": "^3.2.0",
+    "@tsparticles/react": "^3.0.0",
     "anthropic": "^0.0.0",
     "axios": "^1.6.8",
     "classnames": "^2.3.1",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "crawlee": "next",
     "dotenv": "^16.4.5",
     "eslint-config-next": "latest",
@@ -34,10 +36,12 @@
     "playwright": "^1.43.1",
     "punycode": "^2.3.1",
     "react": "latest",
+    "react-device-detect": "^2.2.3",
     "react-dom": "latest",
     "sass": "^1.75.0",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.2",
+    "tsparticles": "^3.3.0",
     "use-debounce": "^10.0.0"
   },
   "devDependencies": {
