preparing cron jobs / initial population

--- a/web/app/.env.local.example
+++ b/web/app/.env.local.example
@@ -10,3 +10,6 @@ ANTHROPIC_API_KEY=""
 
 # If playwright scraping doesnt find the TOS we use google search as the backup:
 GOOGLE_SEARCH_API_KEY=""
+
+# not needed to run application, just quick use of setting up schema: 
+SUPABASE_DATABASE_PASSWORD=""
