--- a/web/app/package.json
+++ b/web/app/package.json
@@ -35,6 +35,7 @@
     "punycode": "^2.3.1",
     "react": "latest",
     "react-dom": "latest",
+    "react-json-view": "^1.21.3",
     "sass": "^1.75.0",
     "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.2",
