--- a/web/app/package.json
+++ b/web/app/package.json
@@ -31,6 +31,7 @@
     "next": "latest",
     "next-plausible": "^3.12.0",
     "next-themes": "^0.3.0",
+    "openai": "^4.47.1",
     "playwright": "^1.43.1",
     "punycode": "^2.3.1",
     "react": "latest",
