--- a/web/app/.env.local.example
+++ b/web/app/.env.local.example
@@ -4,9 +4,10 @@ SUPABASE_HOSTNAME="xxxx.supabase.co"
 NEXT_PUBLIC_SUPABASE_URL=""
 NEXT_PUBLIC_SUPABASE_ANON_KEY=""
 
-# API key for Claude Haiku
+# API key for Claude Haiku & OpenAI as a backup (because of rate limiting)
 # learn more: https://docs.anthropic.com/claude/reference/getting-started-with-the-api
 ANTHROPIC_API_KEY=""
+OPENAI_API_KEY=""
 
 # If playwright scraping doesnt find the TOS we use google search as the backup:
 GOOGLE_SEARCH_API_KEY=""
