--- a/web/app/package.json
+++ b/web/app/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.6.8",
     "classnames": "^2.3.1",
     "clsx": "^2.1.0",
+    "cors": "^2.8.5",
     "crawlee": "next",
     "dotenv": "^16.4.5",
     "eslint-config-next": "latest",
