chrome extension working now

--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -9,7 +9,9 @@
     "tabs"
   ],
   "host_permissions": [
-    "*://tosbuddy.com/*"
+    "*://tosbuddy.com/*",
+    "http://localhost/*",
+    "http://127.0.0.1/*"
   ],
   "content_scripts": [
     {
