--- a/web/app/package.json
+++ b/web/app/package.json
@@ -29,14 +29,14 @@
     "framer-motion": "^11.1.5",
     "imagemagick": "^0.1.3",
     "marked": "^12.0.1",
-    "next": "latest",
+    "next": "^14.2.3",
     "next-plausible": "^3.12.0",
     "next-themes": "^0.3.0",
     "openai": "^4.47.1",
     "playwright": "^1.43.1",
     "punycode": "^2.3.1",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-json-view": "^1.21.3",
     "sass": "^1.75.0",
     "swiper": "^11.1.1",
