--- a/web/app/package.json
+++ b/web/app/package.json
@@ -15,9 +15,13 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.20.2",
+    "@headlessui/react": "^2.0.1",
+    "@headlessui/tailwindcss": "^0.2.0",
+    "@heroicons/react": "^2.1.3",
     "@supabase/supabase-js": "^2.42.5",
     "@supabase/ui": "^0.37.0-alpha.50",
     "@tabler/icons-react": "^3.2.0",
+    "@types/react-dom": "^18.2.18",
     "anthropic": "^0.0.0",
     "axios": "^1.6.8",
     "classnames": "^2.3.1",
@@ -38,7 +42,6 @@
     "react-dom": "latest",
     "react-json-view": "^1.21.3",
     "sass": "^1.75.0",
-    "swiper": "^11.1.1",
     "tailwind-merge": "^2.2.2",
     "use-debounce": "^10.0.0"
   },
@@ -59,6 +62,8 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
     "tailwindcss-radix": "^3.0.3",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "eslint": "^8.56.0",
+    "sharp": "0.33.1"
   }
 }
