trying to fix slug

--- a/web/app/.env.local.example
+++ b/web/app/.env.local.example
@@ -12,5 +12,9 @@ OPENAI_API_KEY=""
 # If playwright scraping doesnt find the TOS we use google search as the backup:
 GOOGLE_SEARCH_API_KEY=""
 
+# might move to SERPAPI? Google console bad ui + low free-tier
+# exa.ai also good, 1000 requests/month
+
+
 # not needed to run application, just quick use of setting up schema: 
 SUPABASE_DATABASE_PASSWORD=""
