--- a/web/app/vercel.json
+++ b/web/app/vercel.json
@@ -1,9 +1,7 @@
 {
     "functions": {
       "pages/api/crawl.ts": {
-        "includeFiles": [
-          "node_modules/playwright/**"
-        ]
+        "includeFiles": "node_modules/playwright/**"
       }
     }
   }
