--- a/web/app/docker-compose.yml
+++ b/web/app/docker-compose.yml
@@ -2,10 +2,12 @@ version: '3.8'
 
 services:
   api:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: api_service
     ports:
-      - "3000:3000" # Map port 3000 on the host to port 3000 in the container
+      - "3000:3000"
     environment:
       NEXT_PUBLIC_SUPABASE_URL: ${NEXT_PUBLIC_SUPABASE_URL}
       NEXT_PUBLIC_SUPABASE_ANON_KEY: ${NEXT_PUBLIC_SUPABASE_ANON_KEY}
@@ -14,9 +16,9 @@ services:
       GOOGLE_SEARCH_API_KEY: ${GOOGLE_SEARCH_API_KEY}
     volumes:
       - .:/app
-    command: npm run start # Adjust this command based on how you start your application
+    command: bun run start
 
 networks:
   default:
     external:
-      name: my_network # Replace with your network name if needed
+      name: my_network
