huge cleanup and upgrade

--- a/web/app/package.json
+++ b/web/app/package.json
@@ -21,7 +21,7 @@
     "@supabase/supabase-js": "^2.42.5",
     "@supabase/ui": "^0.37.0-alpha.50",
     "@tabler/icons-react": "^3.2.0",
-    "@types/react-dom": "^18.2.18",
+    "@types/react-dom": "19.0.2",
     "anthropic": "^0.0.0",
     "axios": "^1.6.8",
     "classnames": "^2.3.1",
@@ -29,19 +29,19 @@
     "cors": "^2.8.5",
     "crawlee": "next",
     "dotenv": "^16.4.5",
-    "eslint-config-next": "latest",
+    "eslint-config-next": "15.1.2",
     "framer-motion": "^11.1.5",
     "imagemagick": "^0.1.3",
     "marked": "^12.0.1",
-    "next": "latest",
+    "next": "15.1.2",
     "next-plausible": "^3.12.0",
     "next-themes": "^0.3.0",
     "openai": "^4.47.1",
     "playwright": "^1.43.1",
     "playwright-aws-lambda": "^0.10.0",
     "punycode": "^2.3.1",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "sass": "^1.75.0",
     "tailwind-merge": "^2.2.2",
     "use-debounce": "^10.0.0"
@@ -54,7 +54,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/marked": "^6.0.0",
     "@types/node": "^20.12.7",
-    "@types/react": "^18.2.79",
+    "@types/react": "19.0.2",
     "autoprefixer": "^10.4.19",
     "deepmerge": "^4.3.1",
     "mini-svg-data-uri": "^1.4.4",
@@ -66,5 +66,9 @@
     "typescript": "^5.4.5",
     "eslint": "^8.56.0",
     "sharp": "0.33.1"
+  },
+  "overrides": {
+    "@types/react": "19.0.2",
+    "@types/react-dom": "19.0.2"
   }
 }
